--- a/TouchingStory/TagKeyword.xaml
+++ b/TouchingStory/TagKeyword.xaml
@@ -5,6 +5,22 @@
     Loaded="TagKeyword_Loaded"
     Height="500" Width="500">
     <s:ScatterView Name="VisualizedCells">
+        <s:ScatterView HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <s:ScatterViewItem
+Background="WhiteSmoke"
+Width="{Binding Path=ActualWidth, ElementName=story}"
+Height="{Binding Path=ActualHeight, ElementName=story}">
+                <TextBlock
+Name="story"
+Padding="20"
+Background="WhiteSmoke"
+Foreground="Black"
+TextAlignment="Left"
+Width="500"
+Text="NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan. ">
+                </TextBlock>
+            </s:ScatterViewItem>
+        </s:ScatterView>
         <Label Name="CameraModel" 
                Content="Model" 
                HorizontalAlignment="Center" 
