--- a/TouchingStory/TagKeyword.xaml
+++ b/TouchingStory/TagKeyword.xaml
@@ -5,7 +5,7 @@
     Loaded="TagKeyword_Loaded"
     Height="500" Width="500">
 
-    <!--doubletest-->
+    <!--doubletest-->q
 
     <s:ScatterView Name="VisualizedCells">
         <s:ScatterView HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
