update scatterview to canvas

--- a/TouchingStory/TagKeyword.xaml
+++ b/TouchingStory/TagKeyword.xaml
@@ -3,52 +3,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="http://schemas.microsoft.com/surface/2008"
     Loaded="TagKeyword_Loaded"
-    Height="500" Width="500">
+    Height="500" Width="500"
+                    Background="Yellow">
 
-    <s:ScatterView Name="VisualizedCells">
-        <!-- Storywindow commented out because Lotte wants to work on the positioning of the cells
-        <s:ScatterViewItem
-            Background="WhiteSmoke"
-            Width="{Binding Path=ActualWidth, ElementName=story}"
-            Height="{Binding Path=ActualHeight, ElementName=story}">
-            <TextBlock
-                Name="story"
-                Padding="20"
-                Background="WhiteSmoke"
-                Foreground="Black"
-                TextAlignment="Left"
-                Width="500"
-                Text="NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan.NS: Eh dr was eens een eh meisje en ze heette Roodkapje en ze had rood aan. ">
-            </TextBlock>
-        </s:ScatterViewItem>
-        -->
-        <!-- Also commented out because it is not needed anymore...this introduces a couple of errors
-             because it is called in surfacewindow1.xaml.cs
-        <Label Name="CameraModel" 
-               Content="Model" 
-               HorizontalAlignment="Center" 
-               VerticalAlignment="Center"
-               FontSize="10"/>
-        -->
-        
-        <!-- same as above
-        <Grid Height="60"
-              Width="100">
-            <Ellipse Name="myEllipse"
-                     VerticalAlignment="Stretch"
-                     HorizontalAlignment="Stretch"
-                     />
-            <TextBlock Name="StoryCell" 
-                       Text="Brief aadsd asasa sasas sasas sasasas sasasa sadhhhhhhh" 
-                       FontSize="10"     
-                       Background="LightBlue"
-                       Foreground="Black"                      
-                       FontStretch="UltraExpanded"
-                       Padding="5,10,5,10"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-            ></TextBlock>
-        </Grid>
-     -->
-    </s:ScatterView>
+    <Canvas Name="VisualizedCells"
+            Height="500"
+            Width="500"
+            Background="Black"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+              >       
+    </Canvas>
 </s:TagVisualization>
