--- a/TouchingStory/TagKeyword.xaml
+++ b/TouchingStory/TagKeyword.xaml
@@ -3,15 +3,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="http://schemas.microsoft.com/surface/2008"
     Loaded="TagKeyword_Loaded"
-    Height="500" Width="500"
                     Background="Yellow">
 
     <Canvas Name="VisualizedCells"
-            Height="500"
-            Width="500"
-            Background="Black"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch"
-              >       
+            Height="600"
+            Width="600"
+            Background="Black">       
     </Canvas>
 </s:TagVisualization>
