changed text of prompt and removed lines of story windows

--- a/TouchingStory/SurfaceWindow1.xaml
+++ b/TouchingStory/SurfaceWindow1.xaml
@@ -19,11 +19,11 @@
         </s:TagVisualizer>
         <TextBlock
             Name="StartingMessage"
-            Text="Put a fairy object on the table"
+            Text="Please put an object on the table"
             Foreground="Black"
             FontSize="30"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            FontFamily="Times New Roman"></TextBlock>
+            ></TextBlock>
     </Grid>
 </s:SurfaceWindow>
