--- a/TouchingStory/SurfaceWindow1.xaml
+++ b/TouchingStory/SurfaceWindow1.xaml
@@ -14,7 +14,8 @@
             Background="White" 
             Height="Auto" Width="Auto"
             VisualizationAdded="OnVisualizationAdded"           
-            VisualizationMoved="OnVisualizationMoved"             
+            VisualizationMoved="OnVisualizationMoved" 
+            VisualizationRemoved="OnVisualizationRemoved"
             >
         </s:TagVisualizer>
         <TextBlock
