--- a/TouchingStory/SurfaceWindow1.xaml
+++ b/TouchingStory/SurfaceWindow1.xaml
@@ -19,7 +19,7 @@
         </s:TagVisualizer>
         <TextBlock
             Name="StartingMessage"
-            Text="Please put an object on the table"
+            Text="Plaats een object op de tafel"
             Foreground="Black"
             FontSize="30"
             HorizontalAlignment="Center"
